--- a/GB-SwiftUI/GB-SwiftUI/Info.plist
+++ b/GB-SwiftUI/GB-SwiftUI/Info.plist
@@ -2,6 +2,93 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>AppIcon</string>
+			</array>
+			<key>UIPrerenderedIcon</key>
+			<false/>
+		</dict>
+		<key>CFBundleAlternateIcons</key>
+		<dict>
+			<key>AppIcon-2</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>AppIcon-2</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+			<key>5b6e9529-e1f4-4360-b13a-c8803822ccdb</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>5b6e9529-e1f4-4360-b13a-c8803822ccdb</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+            <key>1fff1ed5-5441-4a5b-ab40-d5e520d7cc10</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>1fff1ed5-5441-4a5b-ab40-d5e520d7cc10</string>
+                </array>
+                <key>UIPrerenderedIcon</key>
+                <false/>
+            </dict>
+            <key>7cc53e29-eccb-4aad-9298-65b779f35c7d</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>7cc53e29-eccb-4aad-9298-65b779f35c7d</string>
+                </array>
+                <key>UIPrerenderedIcon</key>
+                <false/>
+            </dict>
+            <key>17a7e073-b6e3-35ba-521b-6ffd5a5e4df0</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>17a7e073-b6e3-35ba-521b-6ffd5a5e4df0</string>
+                </array>
+                <key>UIPrerenderedIcon</key>
+                <false/>
+            </dict>
+            <key>272d3c55-cd0f-4b73-a5da-28edaa1f8971</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>272d3c55-cd0f-4b73-a5da-28edaa1f8971</string>
+                </array>
+                <key>UIPrerenderedIcon</key>
+                <false/>
+            </dict>
+            <key>810f0f3c-7e3c-44e7-b381-1d81a0ee209e</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>810f0f3c-7e3c-44e7-b381-1d81a0ee209e</string>
+                </array>
+                <key>UIPrerenderedIcon</key>
+                <false/>
+            </dict>
+            <key>f044e2d8-e550-4a01-b092-d05644800b8a</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>f044e2d8-e550-4a01-b092-d05644800b8a</string>
+                </array>
+                <key>UIPrerenderedIcon</key>
+                <false/>
+            </dict>
+		</dict>
+	</dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
